--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "singleQuote": true,
     "tabWidth": 2
   },
-  "files": [
-    "dist"
-  ],
+  "husky": {
+    "hooks": {
+      "pre-push": "npm run build"
+    }
+  },
   "peerDependencies": {
     "nest-utilities-client": "^3.0.0-alpha.6",
     "react": "^16.8.0"
@@ -30,6 +32,7 @@
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.0",
+    "husky": "^4.3.6",
     "nest-utilities-client": "^3.0.0-alpha.6",
     "prettier": "^2.2.1",
     "react": "^16.8.0",
