--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nest-utilities-client-state",
+  "name": "@hulanbv/nest-utilities-client-state",
   "version": "0.0.1",
   "description": "React hooks for state management when using nest-utilities-client and a nest-utilities based API.",
   "main": "dist/index.js",
